--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,13 +12,17 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
+          # This next line is a safeguard in case pytest/ruff
+          # are missing from your [dev] dependencies.
+          pip install ruff pytest 
+          
       - name: Lint (ruff)
-        run: |
-          pip install ruff
-          ruff check .
+        run: ruff check .  # <-- No 'pip install' needed here
+
       - name: Test (pytest)
-        run: pytest -q
+        run: pytest -q     # <-- No 'pip install' needed here
