webui: add hourly rain column, switch daily rain icon, and responsive grid tweaks; unify rain/humidity/dew icons backend: update transform/report and add web entry (index, web.py, favicon); compare helper
- Hourly: add Rain (mm) column with icon, adjust grid and mobile wrap
- Daily: use dedicated rain icon in cards
- Styles: update hourly grid columns and muted styles
- App: new/updated files for web UI (index.html, favicon) and endpoints; minor report/transform touch-ups

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,14 @@ dependencies = [
   "altair>=5.0",
   "jinja2>=3.1",
   "pydantic>=2.7",
-  "pydantic-settings>=2.3"
+  "pydantic-settings>=2.3",
+  "fastapi>=0.110",
+  "uvicorn[standard]>=0.23"
 ]
 
 [project.scripts]
 etl-weather = "etl_weather.cli:app"
+etl-weather-web = "etl_weather.web:main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
