feat(city-funfact): implement endpoint and UI for fetching fun facts about cities
feat(utils): enhance get_city_fun_fact function with improved error handling and context-based responses

feat(web): implement dynamic web UI directory resolution and improve error handling for missing directories

refactor(web): update get_city_funfact endpoint to accept fresh parameter for fetching new fun facts

refactor(app.js): simplify UI by removing legacy table renderer and updating comments for clarity

feat(favicon): add favicon.svg for web application

feat(ai-status): add diagnostic endpoint to check Gemini SDK and model availability

feat(city-funfact): add caching mechanism for city fun facts and enhance endpoint with background refresh

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
   "pydantic>=2.7",
   "pydantic-settings>=2.3",
   "fastapi>=0.110",
-  "uvicorn[standard]>=0.23"
+  "uvicorn[standard]>=0.23",
+  "aiofiles>=23.0",
+  "python-dotenv>=1.0"
 ]
 
 [project.scripts]
@@ -25,3 +27,16 @@ etl-weather-web = "etl_weather.web:main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[project.optional-dependencies]
+ai = [
+  "google-generativeai>=0.7"
+]
+
+dev = [
+  "pytest>=7.4",
+  "pytest-cov>=4.1",
+  "ruff>=0.6",
+  "black>=24.8",
+  "pre-commit>=3.7"
+]
