feat(ui): restructure search interface and enhance styling for improved user experience

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-CITY=Surakarta
-DAYS=7
-TIMEZONE=Asia/Jakarta
+GEMINI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+GEMINI_MODEL=xxxxxxx-2.5-pro,xxxxxxx-2.5-flash
