--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,18 +18,15 @@ dependencies = [
   "fastapi>=0.121",
   "uvicorn[standard]>=0.38",
   "aiofiles>=25.1.0",
-  "python-dotenv>=1.2.1"
+  "python-dotenv>=1.2.1",
   "google-generativeai>=0.8.5"
+]
 
 [project.scripts]
 etl-weather = "etl_weather.cli:app"
 etl-weather-web = "etl_weather.web:main"
 
-[tool.setuptools.packages.find]
-where = ["src"]
-  
-]
-
+[project.optional-dependencies]
 dev = [
   "pytest>=7.4",
   "pytest-cov>=4.1",
@@ -37,3 +34,6 @@ dev = [
   "black>=24.8",
   "pre-commit>=3.7"
 ]
+
+[tool.setuptools.packages.find]
+where = ["src"]
