--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,16 +13,15 @@ jobs:
         with:
           python-version: "3.11"
           
-      - name: Install deps
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
-          # This next line is a safeguard in case pytest/ruff
-          # are missing from your [dev] dependencies.
-          pip install ruff pytest 
           
-      - name: Lint (ruff)
-        run: ruff check .  # <-- No 'pip install' needed here
+      - name: Lint with ruff
+        run: ruff check src/ tests/
+        continue-on-error: false
 
-      - name: Test (pytest)
-        run: pytest -q     # <-- No 'pip install' needed here
+      - name: Run tests
+        run: pytest -q
+        continue-on-error: false
